Remove p tag and add h4 tag

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <script src="script.js"></script>
 <body>
     <h1>Welcome to my calculator application</h1>
-    <p>We created a basic calculator</p>
+    <h4>My calculator application will be helpful for students</h4>
 </body>
 </html>
