--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 <body>
     <h1>Welcome to my calculator application</h1>
     <p>We created a basic calculator</p>
+    <input type="text" name="first"><br>
+    <input type="text" name="second"><br>
+    <button>Calculate</button>
 </body>
 </html>
